--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
 
     <div id="text-input">
-      <input type="text" id="texttorevert" />
+      <input type="text" id="input" />
       <input type="button" value="Revert" id="revertbutton" />
     </div>
     <h2 id="result"></h2>
